[package]
name = "is-real"
version = "0.1.0"
edition = "2021"
description   = "Is this real?"
documentation = "https://docs.rs/is-real"
readme = "README.md"
homepage = "https://docs.rs/is_real"
repository = "https://github.com/QuqqU/rust-is-real"
license = "MIT"
keywords = ["automata", "real", "number", "floating"]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3

[dependencies]
